--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,4 +26,4 @@ robotpy_extras = [
 ]
 
 # Other pip packages to install
-requires = ["robotpy-rev", "robotpy-commands-v2"]
+requires = ["robotpy-rev", "robotpy-commands-v2", "robotpy-playingwithfusion"]
